[package]
name = "rue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creek = { path="../../creek" }
lazy_static = "1.4.0"
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
bytemuck = "1.8.0"
vulkano-win = "0.29.0"
winit = "0.26.1"