[package]
name = "rue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2"
creek = { path="../../creek" }
raw-window-handle = "0.4.3"
winit = "0.26.1"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
num-traits = "0.2.15"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"